# card-fraud

./: .gitattributes  .gitignore  DEPLOYMENT.md  Dockerfile  MLOPS_BLUEPRINT.md  MONITORING.md  README.md  USAGE.md  docker-compose.monitoring.yml  main.py  pyproject.toml  quick_start.sh  train.py
.github/workflows/: ci.yml
data/splits/: metadata.json  val.csv
models/baseline_logistic/: model.pkl  model_info.json  preprocessing_pipeline.pkl
models/xgboost_v1/: model.pkl  model_info.json
monitoring/: alert_rules.yml  alertmanager.yml  prometheus.yml
monitoring/grafana-dashboards/: data_drift.json  model_performance.json
notebooks/: eda_creditcard.py
notebooks/__marimo__/session/: eda_creditcard.py.json
predictions/: inference_stats.json  test_predictions.csv
src/: __init__.py
src/data/: preprocessing.py  splits.py
src/inference/: batch.py
src/models/: train.py
src/monitoring/: __init__.py  drift.py
tests/: conftest.py  test_preprocessing.py  test_splits.py
