[project]
name = "card-fraud"
version = "0.1.0"
description = "Credit card fraud detection ML pipeline with MLOps best practices"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "marimo>=0.9.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "scikit-learn>=1.3.0",
    "imbalanced-learn>=0.11.0",
    "xgboost>=2.0.0",
    "lightgbm>=4.0.0",
]
